--- a/Backend/config/config.env
+++ b/Backend/config/config.env
@@ -1,5 +1,4 @@
 PORT = 4000
-
 MONGO_URI = "mongodb+srv://kingdeveloper:ankitking$123%40singh@ecommerce.bh9rtox.mongodb.net/myportfolio"
 JWT_SECRET = "Ankitkumarsingh"
 SMPT_HOST = "smtp.mailtrap.io"
@@ -10,3 +9,4 @@ MYMAIL = 'ankitsingh2000.15.1@gmail.com'
 CLOUDINARY_API_KEY = "653589913129999"
 CLOUDINARY_API_SECRET = "AlfZCWv6y_JYjCUSBynKn-lfPEs"
 CLOUDINARY_CLOUD_NAME = "dabftpgij"
+base_url = "https://portfolio-backend-dz7p.onrender.com"
